# threat-modeling-ssg

./: pyproject.toml
.github/: dependabot.yml
src/ratm/ssg/: cli.py
src/ratm/ssg/templates/: base.html  scenario.html
src/ssg_threatmodel/: cli.py  graphs.py  models.py  views.py
src/ssg_threatmodel/templates/: base.html  threats_components.html
src/ssg_threatmodel/templates/assets/: main.css
