[build-system]
requires = ["uv_build>=0.11.1,<0.12"]
build-backend = "uv_build"

[project]
name = "ratm"
version = "0.1.0"
requires-python = ">=3.13"
readme = "README.md"
authors = [
    { name = "Alex Pyrgiotis", email = "alex.p@freedom.press" },
    { name = "Alexis M", email = "alexis@freedom.press" },
]

dependencies = [
    "click>=8",
    "jinja2>=3",
    "pydantic>=2",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[project.scripts]
ratm = "ratm.ssg.cli:main"

[tool.uv.build-backend]
module-name = "ratm"

[tool.uv.build-backend.wheel]
artifacts = [
    "src/ratm/templates/assets/*.js",
]